[tool.poetry]
name = "sparqlfun"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = ">=1.1.15"
Jinja2 = "^3.0.3"
rdflib = ">=6.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
linkml = "^1.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
