[tool.poetry]
name = "sparqlfun"
version = "0.0.0"
description = "SPARQL templates for LinkML"
authors = ["cmungall <cjm@berkeleybop.org>"]

readme = "README.md"

homepage = "https://github.com/linkml/sparqlfun"
repository = "https://github.com/linkml/sparqlfun"
documentation = "https://github.com/linkml/sparqlfun"

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = ">=1.1.15"
Jinja2 = "^3.0.3"
rdflib = ">=6.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
linkml = "^1.1.13"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
