[metadata]
name = sparqlfun
url = https://github.com/linkml/linkml
author = Harold Solbrig
author_email = solbrig@jhu.edu
summary = Linked Open Data Modeling Language
description_file = README.md
long_description_content_type = text/markdown
home_page = http://linkml.github.io/linkml
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    linkml
    biolink
    metamodel
    sparql

[files]
packages =
    sparqlfun
    includes


[entry_points]
console_scripts =
    sparqlfun = sparqlfun.query_engine:cli
